# komutracker-rust

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml
aw-app/: Cargo.toml
docs/: kt-server-remote-implementation-plan.md
kt-app/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
kt-app/.cargo/: config.toml
kt-app/icons/dev/: icon.icns
kt-app/src/: dirs.rs  lib.rs  logging.rs  main.rs  manager.rs  mode.rs
kt-client/: .gitmodules
kt-server-rust/: Cargo.toml  Makefile  README.md  compile-android.sh  install-ndk.sh  kt-server.service
kt-server-rust/.github/workflows/: build.yml
kt-server-rust/kt-client-rust/: Cargo.toml  README.md
kt-server-rust/kt-client-rust/src/: blocking.rs  classes.rs  lib.rs  queries.rs  single_instance.rs
kt-server-rust/kt-client-rust/tests/: test.rs
kt-server-rust/kt-datastore/: Cargo.toml
kt-server-rust/kt-datastore/src/: datastore.rs  legacy_import.rs  worker.rs
kt-server-rust/kt-datastore/tests/: datastore.rs
kt-server-rust/kt-models/: Cargo.toml
kt-server-rust/kt-models/examples/: schema.rs
kt-server-rust/kt-query/: Cargo.toml
kt-server-rust/kt-server/: Cargo.toml  build.rs
kt-server-rust/kt-sync/: Cargo.toml  README.md  test-server.sh  test-sync-pull.sh  test-sync-push.sh
kt-server-rust/kt-sync/src/: accessmethod.rs  dirs.rs  main.rs  sync.rs  sync_wrapper.rs  util.rs
kt-server-rust/kt-sync/tests/: sync.rs
kt-server-rust/kt-transform/: Cargo.toml
kt-webui/: .eslintignore  .eslintrc.json  Makefile  README.md  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.js  vue.config.js
kt-webui-react/: index.html  package-lock.json  package.json
kt-webui-react/src/: App.tsx  index.css  main.tsx
kt-webui/.github/: ISSUE_TEMPLATE.md  configure_server.sh
kt-webui/media/: README.md
kt-webui/src/: App.vue  globals.d.ts  main.js  queries.ts
kt-webui/static/: dark.css
(+106 files in other folders)
