[package]
name = "kt-datastore"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>"]
edition = "2021"

[features]
default = [] # no features by default
legacy_import_tests = []

[dependencies]
appdirs = "0.2"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["chrono", "serde_json", "bundled"]  }
mpsc_requests = "0.3"
log = "0.4"

kt-models = { path = "../kt-models" }
kt-transform = { path = "../kt-transform" }
