[package]
name = "kt-sync"
version = "0.1.0"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2021"

[lib]
name = "kt_sync"
path = "src/lib.rs"

[[bin]]
name = "kt-sync"
path = "src/main.rs"

[dependencies]
log = "0.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.1", features = ["derive"] }
appdirs = "0.2.0"
dirs = "6.0.0"
gethostname = "0.4.3"
ctrlc = "3.4.5"

kt-server = { path = "../kt-server" }
kt-models = { path = "../kt-models" }
kt-datastore = { path = "../kt-datastore" }
kt-client-rust = { path = "../kt-client-rust" }

[target.'cfg(target_os="linux")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }  # https://github.com/ncc-sg/kt-server-rust/issues/478
